Use List.of() in ServiceList.